[tool.poetry]
name = "umeboshi-python"
version = "0.1.0"
description = "最初"
authors = ["baitsu <darenbaitsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
#[tool.pytest.ini_options]
#minversion = "6.0"
#addopts = "-ra -q"
#testpaths = [
#    "tests",
#    "integration",
#]